--- a/projects.html
+++ b/projects.html
@@ -124,11 +124,9 @@
                     I have the 2017 Sport trim which means there are no fog lights on the bumper so I took advantage of the extra space.</li>
                 </ul>
             </div>
-            <video width="640" height="480" controls>
-            <source src="images/duct cad.mp4" type="video/mp4">
-            
-            Your browser does not support the video tag.
-            </video>
+            <div class="container" style="padding-bottom:56.25%; position:relative; display:block; width: 100%;" align-items: "center";>
+			<iframe width="100%" height="100%" src="https://www.youtube.com/embed/Vp_tNLuceOk?start=140" title="YouTube video player" style="position:absolute; top:0; left: 0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+		    </div>
         </div>
     </section>
 
