--- a/projects.html
+++ b/projects.html
@@ -118,15 +118,13 @@
                 <h1 class="md">Smart Parking</h1>
                 <h4>Real Time Parking Monitor for CSUDH</h4>
                 <ul>
-                    <li>Designed and printed brake ducts for my GTI in ASA in order to cool the brake rotors.
-                    I have a TTRS Big Brake Kit installed on my car and the OEM rotors are known to heat up due to the bad rotor fin design.
-                    In order to save myself some money, instead of buying $1k 2 piece rotors, I built these ducts to cool the brakes for spirited drives and track days.
-                    I have the 2017 Sport trim which means there are no fog lights on the bumper so I took advantage of the extra space.</li>
+                    <li>Senior project where we had to come up with an app that we haven't seen before. This app takes a livestream and gives real time updates on 
+			    which parking spots were open/taken. This demo was our school parking lot which was always busy.</li>
                 </ul>
             </div>
             <div class="container" style="padding-bottom:56.25%; position:relative; display:block; width: 100%;" align-items: "center";>
-			<iframe width="100%" height="100%" src="https://www.youtube.com/embed/Vp_tNLuceOk?start=140" title="YouTube video player" style="position:absolute; top:0; left: 0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-		    </div>
+		<iframe width="100%" height="100%" src="https://www.youtube.com/embed/Vp_tNLuceOk?start=140" title="YouTube video player" style="position:absolute; top:0; left: 0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+	    </div>
         </div>
     </section>
 
@@ -137,16 +135,14 @@
                 <h1 class="md">Toros Nav</h1>
                 <h4>Navigation App for Finding Classes</h4>
                 <ul>
-                    <li>Designed an Android application with GPS and Wifi waypoints to be able to find your class at CSUDH. The campus isn't that big but it can still 
+                    <li>Worked with a group to build an Android application with GPS and Wifi waypoints to be able to find your class at CSUDH. The campus isn't that big but it can still 
                     be confusing to find your class and GPS only works well outside. By using a 3rd party API, I was able to map out the school with waypoints and wifi points 
                     which made finding your class much easier.</li>
                 </ul>
             </div>
-            <video width="640" height="480" controls>
-            <source src="images/duct cad.mp4" type="video/mp4">
-            
-            Your browser does not support the video tag.
-            </video>
+            <div class="container" style="padding-bottom:56.25%; position:relative; display:block; width: 100%;" align-items: "center";>
+		<iframe width="100%" height="100%" src="https://www.youtube.com/embed/eSMuyyN10nw" title="YouTube video player" style="position:absolute; top:0; left: 0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+	    </div>
         </div>
     </section>
 
