--- a/projects.html
+++ b/projects.html
@@ -91,23 +91,18 @@
         </div>
     </section>
 
-    <!-- TorosNav -->
+    <!-- Car Data -->
     <section class="languages py-3">
         <div class="container grid">
             <div>
-                <h1 class="md">Toros Nav</h1>
-                <h4>Navigation App for Finding Classes</h4>
+                <h1 class="md">Car Data</h1>
+                <h4>Web Scraper to Learn Something New</h4>
                 <ul>
-                    <li>Designed an Android application with GPS and Wifi waypoints to be able to find your class at CSUDH. The campus isn't that big but it can still 
-                    be confusing to find your class and GPS only works well outside. By using a 3rd party API, I was able to map out the school with waypoints and wifi points 
-                    which made finding your class much easier.</li>
+                    <li>Created a Jupyter Notebook in order to scrape the web for car data to learn something that I didn't know before. I used Beautiful Soup and Python 
+			to scrape autoevolution's website.</li>
                 </ul>
             </div>
-            <video width="640" height="480" controls>
-            <source src="images/duct cad.mp4" type="video/mp4">
-            
-            Your browser does not support the video tag.
-            </video>
+            <img src="images/car data.jpg" alt="">
         </div>
     </section>
 
