--- a/projects.html
+++ b/projects.html
@@ -102,7 +102,7 @@
 			to scrape autoevolution's website.</li>
                 </ul>
             </div>
-            <img src="images/car data.jpg" alt="">
+            <img src="images/car data.png" alt="">
         </div>
     </section>
 
