--- a/projects.html
+++ b/projects.html
@@ -98,7 +98,7 @@
                 <h1 class="md">Car Data</h1>
                 <h4>Web Scraper to Learn Something New</h4>
                 <ul>
-                    <li>Created a Jupyter Notebook in order to scrape the web for car data to learn something that I didn't know before. I used Beautiful Soup and Python 
+                    <li>Created a Jupyter Notebook in order to scrape the web for car data to learn something that I didn't know before. I used Beautiful Soup and Seaborn 
 			to scrape autoevolution's website.</li>
                 </ul>
             </div>
