--- a/projects.html
+++ b/projects.html
@@ -99,7 +99,7 @@
                 <h4>Web Scraper to Learn Something New</h4>
                 <ul>
                     <li>Created a Jupyter Notebook in order to scrape the web for car data to learn something that I didn't know before. I used Beautiful Soup and Seaborn 
-			to scrape autoevolution's website.</li>
+			to scrape and visualize data from autoevolution's website.</li>
                 </ul>
             </div>
             <img src="images/car data.png" alt="">
