--- a/resume.html
+++ b/resume.html
@@ -113,9 +113,12 @@
                 <h1 class="md">Work Experience</h1>
                 <h4>IT Operations Support (Cogo Systems) Jan 2020-Present</h4>
                 <ul>
-                    <li>Monitored automation equipment and terminal operating system to make sure operations for the vessel were running properly.</li>
-                    <li>Used SQL and crystal reports along with camera footage to research lost containers.</li>
+                    <li>Monitored automation operations and made sure the equipment is functioning properly with the terminal operating system. (Navis XPS and N4)</li>
+                    <li>Provided excellent customer service to operations labor and operations management on issues about the terminal operating system and automation.</li>
+                    <li>Reached out to respective departments and 3rd party businesses to make fixes in order to help the system operate correctly.</li>
+                    <li>Used data collected from Crystal Reports, Microsoft SQL and camera footage to research lost containers, damaged containers, and miscellaneous requests.</li>
                     <li>Tested operations in dev environment to make sure new upgrades work seamlessly with live operations.</li>
+                    <li>Documented Service Desk tickets and tasks completed for each shift.</li>
                 </ul>
             </div>
             <img src="images/logos/cogo.png" alt="">
