--- a/projects.html
+++ b/projects.html
@@ -34,7 +34,7 @@
                     All the projects that I have worked on in the past that I believe was worth sharing. These include school projects and personal projects both software and hardware.
                 </p>
                 <a href="contact.html" class="btn btn-outline">Contact Me</a>
-		<a href="www.github.com/mlyhoops" class="btn btn-outline">View My Github</a>
+		<a href="https://github.com/mlyhoops" class="btn btn-outline">View My Github</a>
             </div>
             <img src="images/docs.png" alt="">
         </div>
