--- a/projects.html
+++ b/projects.html
@@ -103,12 +103,7 @@
                     I have the 2017 Sport trim which means there are no fog lights on the bumper so I took advantage of the extra space.</li>
                 </ul>
             </div>
-		<div class="img">
-            	    <video width="492" height="368" controls>
-            	    <source src="images/duct cad.mp4" type="video/mp4">
-            	    Your browser does not support the video tag.
-            	    </video>
-		</div>
+		<iframe width="100%" height="100%" src="https://www.youtube.com/embed/jMktcm1ds0A" title="YouTube video player" style="position:absolute; top:0; left: 0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
     </section>
     
