--- a/projects.html
+++ b/projects.html
@@ -87,6 +87,10 @@
             <div class="container" style="padding-bottom:56.25%; position:relative; display:block; width: 100%;" align-items: "center";>
 		<iframe width="100%" height="100%" src="https://www.youtube.com/embed/eSMuyyN10nw" title="YouTube video player" style="position:absolute; top:0; left: 0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 	    </div>
+		<object>
+    			<param name="movie" value="https://www.youtube.com/embed/eSMuyyN10nw"></param>
+    			<embed src="https://www.youtube.com/embed/eSMuyyN10nw" type="application/x-shockwave-flash"></embed>
+		</object>
         </div>
     </section>
     
@@ -102,9 +106,10 @@
                     In order to save myself some money, instead of buying $1k 2 piece rotors, I built these ducts to cool the brakes for spirited drives and track days.
                     I have the 2017 Sport trim which means there are no fog lights on the bumper so I took advantage of the extra space.</li>
                 </ul>
+	    </div>
+	    <div class="container" style="padding-bottom:56.25%; position:relative; display:block; width: 100%;" align-items: "center";>
 		<iframe width="100%" height="100%" src="https://www.youtube.com/embed/jMktcm1ds0A" title="YouTube video player" style="position:absolute; top:0; left: 0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-
-            </div>
+	    </div>  
         </div>
     </section>
     
