--- a/projects.html
+++ b/projects.html
@@ -85,11 +85,7 @@
                 </ul>
             </div>
             <div class="container" style="padding-bottom:56.25%; position:relative; display:block; width: 100%;" align-items: "center";>
-		<!--<iframe width="100%" height="100%" src="https://www.youtube.com/embed/eSMuyyN10nw" title="YouTube video player" style="position:absolute; top:0; left: 0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
-	        <object>
-    			<param name="movie" value="https://www.youtube.com/embed/eSMuyyN10nw"></param>
-    			<embed src="https://www.youtube.com/embed/eSMuyyN10nw" type="application/x-shockwave-flash"></embed>
-		</object>
+		<iframe width="100%" height="100%" src="https://www.youtube.com/embed/eSMuyyN10nw" title="YouTube video player" style="position:absolute; top:0; left: 0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 	    </div>
         </div>
     </section>
