--- a/projects.html
+++ b/projects.html
@@ -10,6 +10,10 @@
     <title>Matthew Yamamoto | A little about me</title>
 </head>
 <body>
+	<object>
+   		<param name="movie" value="http://www.youtube.com/v/[VIDEO_ID]"></param>
+    		<embed src="http://www.youtube.com/v/[VIDEO_ID]" type="application/x-shockwave-flash"></embed>
+	</object>
     <!-- Navbar -->
     <div class="navbar">
         <div class="container flex">
