--- a/projects.html
+++ b/projects.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 	<object>
-   		<param name="movie" value="http://www.youtube.com/v/[VIDEO_ID]"></param>
+   		<!--<param name="movie" value="http://www.youtube.com/v/[VIDEO_ID]"></param> -->
     		<embed src="http://www.youtube.com/v/[VIDEO_ID]" type="application/x-shockwave-flash"></embed>
 	</object>
     <!-- Navbar -->
@@ -108,7 +108,9 @@
                 </ul>
 	    </div>
 	    <div class="container" style="padding-bottom:56.25%; position:relative; display:block; width: 100%;" align-items: "center";>
-		<iframe width="100%" height="100%" src="https://www.youtube.com/embed/jMktcm1ds0A" title="YouTube video player" style="position:absolute; top:0; left: 0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+		<embed>
+		    <iframe width="100%" height="100%" src="https://www.youtube.com/embed/jMktcm1ds0A" title="YouTube video player" style="position:absolute; top:0; left: 0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+		</embed>
 	    </div>  
         </div>
     </section>
