--- a/projects.html
+++ b/projects.html
@@ -10,10 +10,7 @@
     <title>Matthew Yamamoto | A little about me</title>
 </head>
 <body>
-	<object>
-   		<!--<param name="movie" value="http://www.youtube.com/v/[VIDEO_ID]"></param> -->
-    		<embed src="http://www.youtube.com/v/[VIDEO_ID]" type="application/x-shockwave-flash"></embed>
-	</object>
+	
     <!-- Navbar -->
     <div class="navbar">
         <div class="container flex">
@@ -108,9 +105,11 @@
                 </ul>
 	    </div>
 	    <div class="container" style="padding-bottom:56.25%; position:relative; display:block; width: 100%;" align-items: "center";>
-		<embed>
+		<object>
+   		    <param name="movie" value="http://www.youtube.com/v/[VIDEO_ID]"></param>
+    		    <embed width="100%" height="100%" src="https://www.youtube.com/embed/jMktcm1ds0A" type="application/x-shockwave-flash"></embed>
 		    <iframe width="100%" height="100%" src="https://www.youtube.com/embed/jMktcm1ds0A" title="YouTube video player" style="position:absolute; top:0; left: 0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-		</embed>
+	    	</object>
 	    </div>  
         </div>
     </section>
