--- a/projects.html
+++ b/projects.html
@@ -107,7 +107,7 @@
 	    <div class="container" style="padding-bottom:56.25%; position:relative; display:block; width: 100%;" align-items: "center";>
 		<object>
    		    <param name="movie" value="http://www.youtube.com/v/[VIDEO_ID]"></param>
-    		    <embed width="100%" height="100%" src="https://www.youtube.com/embed/jMktcm1ds0A" type="application/x-shockwave-flash"></embed>
+    		    <embed src="https://www.youtube.com/embed/jMktcm1ds0A" type="application/x-shockwave-flash"></embed>
 		    <iframe width="100%" height="100%" src="https://www.youtube.com/embed/jMktcm1ds0A" title="YouTube video player" style="position:absolute; top:0; left: 0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 	    	</object>
 	    </div>  
