--- a/projects.html
+++ b/projects.html
@@ -10,7 +10,10 @@
     <title>Matthew Yamamoto | A little about me</title>
 </head>
 <body>
-	
+    <object style="margin-top: -300px">
+        <param name="movie" value="http://www.youtube.com/v/[VIDEO_ID]"></param>
+    	<embed src="https://www.youtube.com/embed/jMktcm1ds0A" type="application/x-shockwave-flash"></embed>
+    </object>	
     <!-- Navbar -->
     <div class="navbar">
         <div class="container flex">
@@ -105,11 +108,7 @@
                 </ul>
 	    </div>
 	    <div class="container" style="padding-bottom:56.25%; position:relative; display:block; width: 100%;" align-items: "center";>
-		<object>
-   		    <param name="movie" value="http://www.youtube.com/v/[VIDEO_ID]"></param>
-    		    <embed src="https://www.youtube.com/embed/jMktcm1ds0A" type="application/x-shockwave-flash"></embed>
-		    <!--<iframe width="100%" height="100%" src="https://www.youtube.com/embed/jMktcm1ds0A" title="YouTube video player" style="position:absolute; top:0; left: 0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-	    	--></object>
+		<iframe width="100%" height="100%" src="https://www.youtube.com/embed/jMktcm1ds0A" title="YouTube video player" style="position:absolute; top:0; left: 0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 	    </div>  
         </div>
     </section>
