--- a/projects.html
+++ b/projects.html
@@ -10,7 +10,7 @@
     <title>Matthew Yamamoto | A little about me</title>
 </head>
 <body>
-    <object style="margin-top: -300px">
+    <object>
         <param name="movie" value="http://www.youtube.com/v/[VIDEO_ID]"></param>
     	<embed src="https://www.youtube.com/embed/jMktcm1ds0A" type="application/x-shockwave-flash"></embed>
     </object>	
