--- a/projects.html
+++ b/projects.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <object>
-        <param name="movie" value="http://www.youtube.com/v/[VIDEO_ID]"></param>
+        <param name="movie" value="https://www.youtube.com/embed/jMktcm1ds0A"></param>
     	<embed src="https://www.youtube.com/embed/jMktcm1ds0A" type="application/x-shockwave-flash"></embed>
     </object>	
     <!-- Navbar -->
