--- a/projects.html
+++ b/projects.html
@@ -10,9 +10,10 @@
     <title>Matthew Yamamoto | A little about me</title>
 </head>
 <body>
-    <iframe id="myythtml5player" frameborder="0" allowfullscreen="1" allow="autoplay; encrypted-media" width="560" height="315"
-    src="https://www.youtube.com/embed/XdMzPdgg6rs?widget_referrer=https%3A%2F%2Ftinybitegames.com&amp;enablejsapi=1&amp;origin=https%3A%2F%2Ftinybitegames.com&amp;widgetid=1" data-tooltip-align="b,c" data-tooltip="YouTube video player" aria-label="YouTube video player" data-title="YouTube video player"></iframe>
-
+    <object>
+    	<param name="movie" value="http://www.youtube.com/v/[VIDEO_ID]"></param>
+    	<embed src="http://www.youtube.com/v/[VIDEO_ID]" type="application/x-shockwave-flash"></embed>
+    </object>
     <!-- Navbar -->
     <div class="navbar">
         <div class="container flex">
