--- a/projects.html
+++ b/projects.html
@@ -11,8 +11,8 @@
 </head>
 <body>
     <object>
-    	<param name="movie" value="http://www.youtube.com/v/[VIDEO_ID]"></param>
-    	<embed src="http://www.youtube.com/v/[VIDEO_ID]" type="application/x-shockwave-flash"></embed>
+    	<param name="movie" value="https://www.youtube.com/embed/Vp_tNLuceOk?start=140"></param>
+    	<embed src="https://www.youtube.com/embed/Vp_tNLuceOk?start=140" type="application/x-shockwave-flash"></embed>
     </object>
     <!-- Navbar -->
     <div class="navbar">
