--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div class="container grid">
             <div class="showcase-text">
                 <h1>Software Developer</h1>
-                <p>Hello, I am a Software Developer that is interested in Robotics and Data Analysis. This website showcases all of my previous projects, both software and mechanical. If you would like to review my resume, please click below. Thank you for checking out my site! </p>
+                <p>Hello, I am an IT professional that is interested in System Administration and Automation. This website showcases some of my previous projects, both software and mechanical. If you would like to review my resume, please click below. Thank you for checking out my site! </p>
                 <a href="resume.html" class="btn btn-outline">View Resume</a>
             </div>
             <div class="showcase-pic">
