--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
                 <h1>Software Developer</h1>
                 <p>Hello, I am an IT professional that is interested in System Administration and Automation. This website showcases some of my previous projects, both software and mechanical. If you would like to review my resume, please click below. Thank you for checking out my site! </p>
                 <a href="resume.html" class="btn btn-outline">View Resume</a>
+		<a href="projects.html" class="btn btn-outline">View Projects</a>
             </div>
             <div class="showcase-pic">
                 <img class="me" src="images/me.jpeg" alt="Matthew Yamamoto">
@@ -54,7 +55,7 @@
                 </div>
                 <div>
                     <i class="fas fa-scroll fa-4x"></i>
-                    <h3>M.S. in Comp Sci (2024)</h3>
+                    <h3>M.S. in Comp Sci (2025)</h3>
                     <p class="text-secondary">Education</p>
                 </div>
                 <div>
