--- a/resume.html
+++ b/resume.html
@@ -45,7 +45,7 @@
             Resume
         </h2>
         <div class="container flex">
-            <object data="Matthew_Yamamoto_Resume.pdf" type="application/pdf" width="100%" height="600px"></object>
+            <object data="Matthew Yamamoto Resume.pdf" type="application/pdf" width="100%" height="600px"></object>
         </div>
     </section>
 
