--- a/resume.html
+++ b/resume.html
@@ -64,12 +64,12 @@
                     Graduated in 2019 with a Bachelors of Science Degree in Computer Science.
                 </p>
             </div>
-            <div class="card">
+            <!--<div class="card">
                 <h3>California State University Dominguez Hills (2022-2024)</h3>
                 <p>
                     Will graduate in 2024 with a Masters of Science Degree in Computer Science.
                 </p>
-            </div>
+            </div>-->
         </div>
     </section>
 
