--- a/resume.html
+++ b/resume.html
@@ -65,9 +65,9 @@
                 </p>
             </div>
             <!--<div class="card">
-                <h3>California State University Dominguez Hills (2022-2024)</h3>
+                <h3>California State University Dominguez Hills (2025)</h3>
                 <p>
-                    Will graduate in 2024 with a Masters of Science Degree in Computer Science.
+                    Will graduate in 2025 with a Masters of Science Degree in Computer Science.
                 </p>
             </div>-->
         </div>
