--- a/projects.html
+++ b/projects.html
@@ -39,7 +39,22 @@
             <img src="images/docs.png" alt="">
         </div>
     </section>
-	
+
+	<!-- New Item -->
+    <section class="languages bg-light py-3">
+        <div class="container grid">
+            <div>
+                <h1 class="md">To Be Continued</h1>
+                <h4>More Projects will be posted soon...</h4>
+                <ul>
+                    <li>I have many projects that still need to be posted but haven't had the time to do so. Will continue to update this when I get the time. Thank you for the patience. If you would like to learn more please use the contact page.</li>
+                </ul>
+            </div>
+            <div class="container" style="padding-bottom:56.25%; position:relative; display:block; width: 100%;" align-items: "center";>
+		<iframe width="100%" height="100%" src="" title="YouTube video player" style="position:absolute; top:0; left: 0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+	    </div>
+        </div>
+    </section>
 	    <!-- Car Data -->
     <section class="languages py-3">
         <div class="container grid">
