--- a/projects.html
+++ b/projects.html
@@ -47,7 +47,7 @@
                 <h1 class="md">To Be Continued</h1>
                 <h4>More Projects will be posted soon...</h4>
                 <ul>
-                    <li>I have many projects that still need to be posted but haven't had the time to do so. Will continue to update this when I get the time. Thank you for the patience. If you would like to learn more please use the contact page.</li>
+                    <li>I have many projects that still need to be posted but haven't had the time to do so. Will continue to update this when I get the time. Thank you for your patience. If you would like to learn more please use the contact page.</li>
                 </ul>
             </div>
             <div class="container" style="padding-bottom:56.25%; position:relative; display:block; width: 100%;" align-items: "center";>
